--- a/GradesSystem/Resources/layout/AcademyGradesListHeader.xml
+++ b/GradesSystem/Resources/layout/AcademyGradesListHeader.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="8dp"
     android:background="#fff69212">
 
@@ -21,6 +21,7 @@
             android:text="Semester X"
             android:textColor="#ffffffff"
             android:textStyle="bold" />
+
 
     </LinearLayout>
 </LinearLayout>
