--- a/GradesSystem/Resources/layout/SchoolGradesScreen.xml
+++ b/GradesSystem/Resources/layout/SchoolGradesScreen.xml
@@ -5,25 +5,25 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="#ddaacc">
+    android:background="#77aa77">
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_school"
-        android:text="School"
+        android:id="@+id/btn_bagruts"
+        android:text="Bagruts"
         android:textAllCaps="false"
-        android:textSize="40dp"
+        android:textSize="35dp"
         android:fontFamily="serif"
         />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_academy"
-        android:text="Academy"
+        android:id="@+id/btn_ongoing"
+        android:text="Ongoing Grades"
         android:textAllCaps="false"
-        android:textSize="40dp"
+        android:textSize="35dp"
         android:fontFamily="serif"
         />
 
